--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Open+Sans:wght@300;400;600;700&family=Oxanium:wght@500;600;700&family=Raleway&family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Inter:wght@400;700;800&family=Open+Sans:wght@300;400;600;700&family=Oxanium:wght@500;600;700&family=Raleway&family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cracker</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
